# VERSE-OpenSUT

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  README.md  REQUIREMENTS.reqif  REQUIREMENTS.rst  REQUIREMENTS.sdoc  spec_languages.md  strictdoc.toml
src/vm_runner/: .gitignore  Cargo.toml  README.md  build_application_image.py  build_config.toml  build_deb.sh  build_helper.sh  install_config.toml  install_config_guest.toml  install_helper.sh  opensut-boot.service  opensut-boot.target  opensut-trusted-boot.service  opensut-trusted-boot.target
src/vm_runner/src/: config.rs  lib.rs
src/vm_runner/tests/: build_hello_img.sh  build_mps_img.sh  hello_base_nested.toml  hello_base_single.toml  hello_guest.toml  hello_host.toml  hello_single.toml  manage_exit_error.toml  manage_exit_ok.toml  mps_base_nested.toml  mps_base_single.toml  mps_guest.toml  mps_host.toml
src/vm_runner/tests/ardupilot/: ardupilot.sh  base_nested.toml  base_single.toml  build_img.sh  guest.toml  host.toml  plane-jsbsim-ext.parm
src/vm_runner/tests/dev_networked/: base_nested.toml  build_img.sh  guest.toml  host.toml
src/vm_runner/tests/hello/: base_nested.toml  base_single.toml  build_img.sh  host.toml
src/vm_runner/tests/mps/: base_nested.toml  base_single.toml  build_img.sh  guest.toml  host.toml  mps.sh  run_tests.py
src/vm_runner/tests/mps_tests/: base_nested.toml  base_single.toml  build_img.sh  guest.toml  host.toml  mps_tests.sh
src/vm_runner/tests/opensut-dev/: .gitignore  base_nested.toml  base_nested.toml.in  base_single.toml  build_img.sh  (+8 more)
(+269 files in other folders)
