[package]
name = "opensut_vm_runner"
version = "0.1.0"
authors = ["Stuart Pernsteiner <spernsteiner@galois.com>"]
edition = "2018"

default-run = "opensut_vm_runner"

[dependencies]
# Latest `nix` version with MSRV <= 1.63.  Rust 1.63 is what's currently
# provided in Debian Stable.
nix = "0.26.4"
shlex = "1.3.0"
tempfile = "3.10.1"

serde = { version = "1", features = ["derive"] }
toml = "0.7.3"

log = "0.4"
env_logger = "0.10.2"

indexmap = { version = "2.2.6", features = ["serde"] }

sha2 = "0.10.8"
